
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u32 ;


 int AC_DEFCFG_LOCATION ;
 int AC_DEFCFG_LOCATION_SHIFT ;
 int ARRAY_SIZE (unsigned char*) ;

const char *snd_hda_get_jack_location(u32 cfg)
{
 static char *bases[7] = {
  "N/A", "Rear", "Front", "Left", "Right", "Top", "Bottom",
 };
 static unsigned char specials_idx[] = {
  0x07, 0x08,
  0x17, 0x18, 0x19,
  0x37, 0x38
 };
 static char *specials[] = {
  "Rear Panel", "Drive Bar",
  "Riser", "HDMI", "ATAPI",
  "Mobile-In", "Mobile-Out"
 };
 int i;
 cfg = (cfg & AC_DEFCFG_LOCATION) >> AC_DEFCFG_LOCATION_SHIFT;
 if ((cfg & 0x0f) < 7)
  return bases[cfg & 0x0f];
 for (i = 0; i < ARRAY_SIZE(specials_idx); i++) {
  if (cfg == specials_idx[i])
   return specials[i];
 }
 return "UNKNOWN";
}
